# Chat_On_Server

./: .env  Cargo.toml  README.md  chat.db  schema.sql
src/: error.rs  main.rs  state.rs
src/routes/: auth.rs  gpt4o.rs  mod.rs  upload.rs  ws.rs
src/utils/: clean.rs  jwt.rs
static/: app.css  chat.html  index.html  login.html  register.html
static/js/: helper.js
static/uploads/: 070852f5-ff4d-44e4-b560-05380182b970.weba  3db0b199-56fa-4f50-a4b1-2aa9fc4dd754.jfif  42fe9db9-6c16-4b18-ab4f-2bf11a425724.jfif  528ade88-0129-45ac-96c6-5ad2520d7167.jfif  727d0453-9d7d-4602-a308-1dacb7038cfc.jfif  8558d94f-9890-4e1c-ab9a-4eaa35d7aa1c.weba  8f86b6f6-1d1a-4bc3-849f-fb445263afe4.weba  c9b156f4-c408-44f8-a4a2-061d62e4a5c7.weba  e67a56f4-733f-4667-8a19-64148f8a5b3f.weba  f6f73045-0af0-4755-a5c3-01c3e0d43f5b.jfif
