[package]
name    = "chat_server"
version = "0.1.1"
edition = "2021"

[dependencies]
# ───── 核心 ────────────────────────────────
tokio          = { version = "1.37", features = ["full"] }
axum           = { version = "0.7",  features = ["ws", "multipart"] }
axum-extra     = { version = "0.10", features = ["multipart"] }

# ───── 中介層 / 靜態檔 & Body 限制 ────────
tower-http     = { version = "0.6",  features = ["fs", "limit"] }

# ───── 其餘工具 ───────────────────────────
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
jsonwebtoken   = "9"
sqlx           = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
uuid           = { version = "1", features = ["v4"] }
rand           = "0.8"
chrono         = { version = "0.4", features = ["serde"] }
dotenvy        = "0.15"
tracing        = "0.1"
tracing-subscriber = "0.3"
mime_guess     = "2"
bytes          = "1"
futures-util   = "0.3"
anyhow         = "1"
thiserror      = "1"
nanoid         = "0.4"
